--- a/test_G0/test_G0.ioc
+++ b/test_G0/test_G0.ioc
@@ -21,19 +21,21 @@ Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
 Mcu.Pin10=PA8
 Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14-BOOT0
-Mcu.Pin15=PD0
-Mcu.Pin16=PD2
-Mcu.Pin17=PB5
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
+Mcu.Pin12=PC6
+Mcu.Pin13=PC7
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14-BOOT0
+Mcu.Pin17=PD0
+Mcu.Pin18=PD2
+Mcu.Pin19=PB5
 Mcu.Pin2=PF0-OSC_IN (PF0)
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=PB8
+Mcu.Pin23=PB9
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_SYS_VS_DBSignals
 Mcu.Pin3=PF1-OSC_OUT (PF1)
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -41,7 +43,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB10
 Mcu.Pin9=PB15
-Mcu.PinsNb=24
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
@@ -63,13 +65,19 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI1_NSS
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=PinState
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
+PA5.PinState=GPIO_PIN_SET
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=PinState
 PA6.Mode=Full_Duplex_Master
+PA6.PinState=GPIO_PIN_SET
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=PinState
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
+PA7.PinState=GPIO_PIN_SET
 PA7.Signal=SPI1_MOSI
 PA8.Mode=Dual_Role_AllSignals
 PA8.Signal=UCPD1_CC1
@@ -102,6 +110,14 @@ PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=RST_LCD
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=RS_LCD
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PD0.Mode=Dual_Role_AllSignals
 PD0.Signal=UCPD2_CC1
 PD2.Mode=Dual_Role_AllSignals
@@ -176,8 +192,8 @@ RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CalculateBaudRate=4.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
