--- a/test_G0/test_G0.ioc
+++ b/test_G0/test_G0.ioc
@@ -2,19 +2,40 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=SPI1_TX
+Dma.RequestsNb=1
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.0.EventEnable=DISABLE
+Dma.SPI1_TX.0.Instance=DMA1_Channel1
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.0.Mode=DMA_NORMAL
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.0.RequestNumber=1
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.0.SignalID=NONE
+Dma.SPI1_TX.0.SyncEnable=DISABLE
+Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.0.SyncRequestNumber=1
+Dma.SPI1_TX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32G071CBT3
 Mcu.Family=STM32G0
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=UCPD1
-Mcu.IP5=UCPD2
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=UCPD1
+Mcu.IP7=UCPD2
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -26,16 +47,19 @@ Mcu.Pin13=PC7
 Mcu.Pin14=PA10
 Mcu.Pin15=PA13
 Mcu.Pin16=PA14-BOOT0
-Mcu.Pin17=PD0
-Mcu.Pin18=PD2
-Mcu.Pin19=PB5
+Mcu.Pin17=PA15
+Mcu.Pin18=PD0
+Mcu.Pin19=PD2
 Mcu.Pin2=PF0-OSC_IN (PF0)
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_SYS_VS_DBSignals
+Mcu.Pin20=PB3
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_SYS_VS_DBSignals
+Mcu.Pin28=VP_TIM2_VS_OPM
 Mcu.Pin3=PF1-OSC_OUT (PF1)
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -43,12 +67,14 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB10
 Mcu.Pin9=PB15
-Mcu.PinsNb=26
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.EXTI4_15_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -61,8 +87,13 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=SYS_SWCLK
-PA4.GPIOParameters=GPIO_Label
+PA15.GPIOParameters=GPIO_PuPd
+PA15.GPIO_PuPd=GPIO_PULLUP
+PA15.Locked=true
+PA15.Signal=S_TIM2_CH1_ETR
+PA4.GPIOParameters=GPIO_Speed,GPIO_Label
 PA4.GPIO_Label=SPI1_NSS
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=PinState
@@ -83,39 +114,52 @@ PA8.Mode=Dual_Role_AllSignals
 PA8.Signal=UCPD1_CC1
 PA9.Mode=EnableDeadBattery
 PA9.Signal=UCPD1_DBCC1
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB10.GPIO_Label=BUTTON1
+PB10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB10.GPIO_PuPd=GPIO_PULLUP
 PB10.Locked=true
-PB10.Signal=GPIO_Input
+PB10.Signal=GPXTI10
 PB15.Mode=Dual_Role_AllSignals
 PB15.Signal=UCPD1_CC2
-PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB3.GPIOParameters=GPIO_PuPd
+PB3.GPIO_PuPd=GPIO_PULLUP
+PB3.Locked=true
+PB3.Signal=S_TIM2_CH2
+PB5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=LCD_LED
 PB5.GPIO_PuPd=GPIO_NOPULL
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB8.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB8.GPIO_Label=BUTTON2
+PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
-PB8.Signal=GPIO_Input
-PB9.GPIOParameters=GPIO_Label
+PB8.Signal=GPXTI8
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB9.GPIO_Label=BUTTON3
+PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.Locked=true
-PB9.Signal=GPIO_Input
+PB9.Signal=GPXTI9
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_Speed,GPIO_Label
 PC6.GPIO_Label=RST_LCD
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC6.Locked=true
 PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
+PC7.GPIOParameters=GPIO_Speed,GPIO_Label
 PC7.GPIO_Label=RS_LCD
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PD0.Mode=Dual_Role_AllSignals
@@ -157,7 +201,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_SPI1_Init-SPI1-false-LL-true,4-MX_UCPD1_Init-UCPD1-false-LL-true,5-MX_UCPD2_Init-UCPD2-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_DMA_Init-DMA-false-LL-true,4-MX_SPI1_Init-SPI1-false-LL-true,5-MX_UCPD1_Init-UCPD1-false-LL-true,6-MX_UCPD2_Init-UCPD2-false-LL-true,7-MX_USART1_UART_Init-USART1-false-LL-true,8-MX_TIM2_Init-TIM2-false-LL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -192,17 +236,32 @@ RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=8.0 MBits/s
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.IC1Prescaler=TIM_ICPSC_DIV2
+TIM2.IPParameters=Period,IC1Prescaler
+TIM2.Period=65535
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_OPM.Mode=OPM_bit
+VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 board=custom
